Fix vertical alignment of multiline Subjects in history.

--- a/html/views/history/history.css
+++ b/html/views/history/history.css
@@ -13,6 +13,10 @@ body, td {
         padding: 0px;
 }
 
+#commit_header tr {
+        vertical-align: top;
+}
+
 #authorTable {
 	margin: -4px;
 }
